# orbit

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README_CN.md  RELEASE_STATUS_v1.0.4.md  pyproject.toml  setup.py  test_core.py
.github/workflows/: ci.yml
docs/: API_REFERENCE.md  API_REFERENCE_CN.md  BUG_FIX_REPORT.md  CALENDAR_USAGE_GUIDE.md  CLAUDE_SKILL.md  CLI_QUICKSTART.md  CLI_REFERENCE.md  CLI_USAGE_GUIDE.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  CRITICAL_BUG_REPORT.md  DESIGN.md  DESIGN_CN.md  INDEX.md  INDEX_CN.md  PYPI_PUBLISHING.md  PYPI_PUBLISHING_CN.md  QUICKSTART.md  QUICKSTART_CN.md  RELEASE_CHECKLIST.md  RELEASE_v1.0.1.md  RELEASE_v1.0.2.md  RELEASE_v1.0.3.md  RELEASE_v1.0.4.md  SATELLITES.md  SATELLITES_CN.md  SATELLITE_FIXES_SUMMARY.md  SECURITY.md  SECURITY_CN.md  SYSTEM_INFO_FIX.md  TERMINOLOGY.md  TERMINOLOGY_CN.md  TESTING_GAP_ANALYSIS.md  TEST_COVERAGE.md  TEST_IMPROVEMENT_PLAN.md  TEST_IMPROVEMENT_SUMMARY.md  TEST_REPORT.md  TEST_REPORT_v1.0.2.md
examples/: anthropic_integration.py  basic_usage.py  cli_demo.py  cli_examples.md  comprehensive_demo.py  custom_agent.py  custom_safety.py  langchain_integration.py  openai_functions.py  openai_integration.py  test_orbit.py
scripts/: check_applescript.py  completion.bash  create_test_infrastructure.py  install_completion.sh  publish_to_pypi.sh  quick_check.py  release.sh  run_tests.sh  setup.sh  static_analysis.sh
skills/: orbit-macos.md
src/orbit/: __init__.py  cli.py
src/orbit/core/: __init__.py  constellation.py  exceptions.py  launcher.py  mission_control.py  permissions.py  satellite.py  shield.py
src/orbit/parsers/: __init__.py  boolean.py  delimited.py  json.py  regex.py
src/orbit/satellites/: __init__.py  all_satellites.py  apps.py  calendar.py  contacts.py  files.py  finder.py  mail.py  music.py  notes.py  reminders.py  safari.py  system.py  system_enhanced.py  wifi.py
tests/: conftest.py  test_cli.py  test_constellation.py  test_exceptions.py  test_launcher.py  test_mission_control.py  test_parsers.py  test_real_execution.py  test_satellites_integration.py  test_shield.py
tests/core/: __init__.py  test_satellite.py
